--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 15/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 47 points<br>
+Unlocked 15/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 52 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -32,30 +32,32 @@ Unlocked 15/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     34 status
-     23 add
-     21 commit
-     12 push
+     37 status
+     25 add
+     22 commit
+     16 push
+     14 --git-dir=.git
      10 difftool
-      8 --git-dir=.git
+      7 help
+      7 branch
       6 diff
+      5 tree
       5 rebase
-      5 help
-      4 tree
+      5 checkout
       4 reset
       4 pull
-      4 checkout
       3 init
-      3 branch
       2 tag
       2 log
       2 --git-dir=/home/stavros/git/otp/.git
       2 config
       1 stash
+      1 rev-parse
       1 remote
       1 mergetool
       1 clean
